Updated landing page

--- a/index.html
+++ b/index.html
@@ -159,12 +159,13 @@
         <div class="row">
           <div class="col-md-8 col-sm-12">
             <div class="banner-text">
-              <h2 class="white">Experience the Thrill of Fantasy Cricket</h2>
-              <h6 class="white">Crafting Winning Strategies for Cricket Fans in the USA</h6>
-              <p class="banner-text white">Unleash your cricketing expertise on CricBrawl, the ultimate fantasy cricket
-                platform. Sign up now to create your dream team, compete against friends, and win exciting prizes. With
-                real-time updates and immersive gameplay, CricBrawl offers an unparalleled cricketing experience for
-                fans across the USA.</p>
+              <h2 class="white">Discover the Excitement of Fantasy Cricket with CricBrawl!</h2>
+              <h6 class="white">Empowering Cricket Fans Across the USA</h6>
+              <p class="banner-text white">Unlock your cricketing prowess with CricBrawl, the premier fantasy cricket
+                platform. Join now to assemble your dream
+                team, challenge friends, and vie for thrilling prizes. With live updates and immersive gameplay,
+                CricBrawl delivers an
+                unmatched cricketing adventure for fans nationwide.</p>
               <ul>
                 <li><a><img height="40px" src="images/appstore.svg" class="wow fadeInUp" data-wow-delay="0.4s" /></a>
                 </li>
@@ -414,11 +415,12 @@
           <div class="sectioner-header text-center">
             <h3>Join us</h3>
             <span class="line"></span>
-            <p>CricBrawl is shaping the future of fantasy cricket, and we want you to be a part of it. Enter your name
-              and email to join
-              us on this exciting journey. Stay tuned for updates as we launch our first version before 2024 ICC Men's
-              T20 World Cup.
-              2024</p>
+            <p>CricBrawl is revolutionizing the world of fantasy cricket, and we invite you to join us on this thrilling
+              journey. Enter
+              your name and email to become a part of our exciting community. Stay updated as we prepare to launch our
+              first version
+              before the 2024 ICC Men's T20 World Cup.
+            </p>
           </div>
           <div class="section-content">
             <div class="row">
@@ -438,8 +440,7 @@
                     <input id="to_name" name="to_name" type="hidden" value="CricBrawl Team">
                   </div>
                   <input type="hidden" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
-                  <!-- <textarea class="form-input w-100" type="hidden" id="message" placeholder="Message"
-                    name="message"></textarea> -->
+
                   <button class="btn-grad w-100 text-uppercase" type="submit" name="button" onclick="sendEmail()">JOIN
                     WaitList </button>
                 </form>
@@ -451,16 +452,10 @@
                 <div class="contact-info white">
                   <div class="contact-item media"> <i class="fa fa-map-marker-alt media-left media-right-margin"></i>
                     <div class="media-body">
-                      <p class="text-uppercase">HVD Gaming LLC</p>
+                      <p class="text-uppercase">CricBrawl</p>
                       <p class="text-uppercase">Dallas, TX</p>
                     </div>
                   </div>
-                  <!-- <div class="contact-item media"> <i class="fa fa-mobile media-left media-right-margin"></i>
-                  <div class="media-body">
-                    <p class="text-uppercase">Phone</p>
-                    <p class="text-uppercase"><a class="text-white" href="tel:+15173977100">009900990099</a> </p>
-                  </div>
-                </div> -->
                   <div class="contact-item media"> <i class="fa fa-envelope media-left media-right-margin"></i>
                     <div class="media-body">
                       <p class="text-uppercase">E-mail</p>
@@ -468,12 +463,6 @@
                           href="mailto:abcdefg@gmail.com">info@cricbrawl.com</a> </p>
                     </div>
                   </div>
-                  <!-- <div class="contact-item media"> <i class="fa fa-clock media-left media-right-margin"></i>
-                    <div class="media-body">
-                      <p class="text-uppercase">Working Hours</p>
-                      <p class="text-uppercase">Mon-Fri 9.00 AM to 5.00PM.</p>
-                    </div>
-                  </div> -->
                 </div>
               </div>
             </div>
