--- a/pages/terms.html
+++ b/pages/terms.html
@@ -61,7 +61,8 @@
                 <span class="line"></span>
 
             </div>
-            <p style="font-weight: 600; text-align: justify;">Welcome to CricBrawl! These Terms and Conditions ("Terms")
+            <p style="font-weight: 600; text-align: justify;">Welcome to CricBrawl(HVD Gaming LLC)! These Terms and
+                Conditions ("Terms")
                 govern your access
                 to and use of the CricBrawl website (the "Website") and mobile application (the "App"), collectively
                 referred to as the "Platform," provided
