--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
           </div>
           <div class="image-container">
             <div class="carousel">
-              <img src="images/init-1.png" />
               <img src="images/init-2.png" />
               <img src="images/init-3.png" />
+              <img src="images/init-4.png" />
             </div>
           </div>
           <!-- <div class="col-md-4 col-sm-12"> <img src="images/iphone-screen.svg" class="img-fluid wow fadeInUp" /> </div> -->
@@ -300,14 +300,13 @@
               <div class="col-md-6 d-flex justify-content-center">
                 <div class="feat-image-container">
                   <div class="feat-carousel">
-                    <img src="images/iphone-screen.svg" />
-                    <img src="images/feature-1.png" />
-                    <img src="images/feature-2.png" />
-                    <img src="images/feature-3.png" />
-                    <img src="images/feature-4.png" />
-                    <img src="images/feature-5.png" />
-                    <img src="images/feature-6.png" />
-                    <img src="images/feature-7.png" />
+                    <img src="images/feat-1.png" />
+                    <img src="images/feat-2.png" />
+                    <img src="images/feat-3.png" />
+                    <img src="images/feat-4.png" />
+                    <img src="images/feat-5.png" />
+                    <img src="images/feat-6.png" />
+                    <img src="images/feat-7.png" />
                   </div>
                 </div>
 
@@ -536,7 +535,7 @@
                 <a href="https://twitter.com/cricbrawl"><i class="fa fa-twitter mr-1"></i> Twitter</a>
               </li class="list-group-item bg-transparent border-0 p-0 mb-2">
               <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                <a href="https://www.linkedin.com/company/cricbrawl" target="_blank"><i class="fa fa-facebook mr-1"></i>
+                <a href="https://www.linkedin.com/company/cricbrawl" target="_blank"><i class="fa fa-linkedin mr-1"></i>
                   LinkedIn</a>
               </li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2">
