--- a/pages/how-to-play.html
+++ b/pages/how-to-play.html
@@ -191,7 +191,7 @@
                             </li class="list-group-item bg-transparent border-0 p-0 mb-2">
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                 <a href="https://www.linkedin.com/company/cricbrawl" target="_blank"><i
-                                        class="fa fa-facebook mr-1"></i>
+                                        class="fa fa-linkedin mr-1"></i>
                                     LinkedIn</a>
                             </li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2">
