Fixed image style issue

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <section class="banner" data-scroll-index='0'>
     <div class="banner-overlay">
       <div class="container">
-        <div class="row">
+        <div class="row" style="margin-bottom: 60px;">
           <div class="col-md-8 col-sm-12">
             <div class="banner-text">
               <h2 class="white">Discover the Excitement of Fantasy Cricket with CricBrawl!</h2>
@@ -173,11 +173,13 @@
               </ul>
             </div>
           </div>
-          <div class="image-container">
-            <div class="carousel">
-              <img src="images/init-2.png" />
-              <img src="images/init-3.png" />
-              <img src="images/init-4.png" />
+          <div class="col-md-4 col-sm-12">
+            <div class="mx-auto image-container">
+              <div class="carousel">
+                <img src="images/init-2.png" />
+                <img src="images/init-3.png" />
+                <img src="images/init-4.png" />
+              </div>
             </div>
           </div>
           <!-- <div class="col-md-4 col-sm-12"> <img src="images/iphone-screen.svg" class="img-fluid wow fadeInUp" /> </div> -->
@@ -297,8 +299,8 @@
                 </div>
               </div>
               <!-- Feature Image Slider-->
-              <div class="col-md-6 d-flex justify-content-center">
-                <div class="feat-image-container">
+              <div class="col-md-6 d-flex">
+                <div class="mx-auto feat-image-container">
                   <div class="feat-carousel">
                     <img src="images/feat-1.png" />
                     <img src="images/feat-2.png" />
