Added account deletion page

--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -124,6 +124,25 @@
                 safeguard user
                 data against unauthorized access, disclosure, alteration, or destruction.</p>
 
+            <h5>Account Deletion</h5>
+            <p>You have the right to request the deletion of your account and associated personal data from our system.
+                Upon receiving
+                such a request, we will permanently delete your account and all personal information associated with it,
+                except where
+                retention is necessary for compliance with legal obligations, resolving disputes, or enforcing our
+                agreements.</p>
+
+            <p>Please note that deleting your account may not necessarily remove all content or information that you
+                have provided to
+                us, as some data may be retained in backups or archives for a certain period of time. However, such data
+                will be
+                securely isolated and will not be accessible except as required by law.</p>
+
+            <p>To request the deletion of your account, please fill out information in <a href="delete.html">Request
+                    Account
+                    Deletion page</a>. We may require
+                verification of your identity before processing your request.</p>
+
             <h5>Children's Privacy</h5>
             <p>Our Platform is not intended for children under the age of 18, and we do not knowingly collect personal
                 information from
