--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>CricBrawl - USA's Premier Fantasy Cricket Gaming Platform</title>
+  <title>CricBrawl - USA's Premier Fantasy Cricket App</title>
   <meta name="description"
     content="Experience the excitement of fantasy cricket like never before with CricBrawl! As the top destination for cricket enthusiasts in the USA, CricBrawl offers a thrilling gaming experience that combines strategy, skill, and competition. Build your dream team, manage players, and compete in real-time matches against friends and rivals nationwide. With immersive gameplay, real-time scoring, and exciting rewards, CricBrawl takes fantasy cricket to the next level. Join the action now and prove your skills on the virtual pitch with CricBrawl! Visit cricbrawl.com for more details!">
   <meta name="keywords"
