Updated content and form validation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>CricBrawl - USA's Premier Fantasy Cricket App</title>
   <meta name="description"
-    content="Experience the excitement of fantasy cricket like never before with CricBrawl! As the top destination for cricket enthusiasts in the USA, CricBrawl offers a thrilling gaming experience that combines strategy, skill, and competition. Build your dream team, manage players, and compete in real-time matches against friends and rivals nationwide. With immersive gameplay, real-time scoring, and exciting rewards, CricBrawl takes fantasy cricket to the next level. Join the action now and prove your skills on the virtual pitch with CricBrawl! Visit cricbrawl.com for more details!">
+    content="Experience the Thrill of fantasy cricket like never before with CricBrawl! As the top destination for cricket enthusiasts in the USA, CricBrawl offers a thrilling gaming experience that combines strategy, skill, and competition. Build your dream team, manage players, and compete in real-time matches against friends and rivals nationwide. With immersive gameplay, real-time scoring, and exciting rewards, CricBrawl takes fantasy cricket to the next level. Join the action now and prove your skills on the virtual pitch with CricBrawl! Visit cricbrawl.com for more details!">
   <meta name="keywords"
     content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
 
@@ -159,13 +159,13 @@
         <div class="row" style="margin-bottom: 60px;">
           <div class="col-md-8 col-sm-12">
             <div class="banner-text">
-              <h2 class="white">Discover the Excitement of Fantasy Cricket with CricBrawl!</h2>
+              <h2 class="white">Discover the Thrill of Fantasy Cricket with CricBrawl!</h2>
               <h6 class="white">Empowering Cricket Fans Across the USA</h6>
-              <p class="banner-text white">Unlock your cricketing prowess with CricBrawl, the premier fantasy cricket
-                platform. Join now to assemble your dream
-                team, challenge friends, and vie for thrilling prizes. With live updates and immersive gameplay,
-                CricBrawl delivers an
-                unmatched cricketing adventure for fans nationwide.</p>
+              <p class="banner-text white">Unlock your cricketing potential with CricBrawl, the ultimate fantasy cricket
+                app. Create your dream team, challenge
+                friends, and compete for exciting prizes. Experience live updates and immersive gameplay. Join now and
+                be part of the
+                premier fantasy cricket community in the USA.</p>
               <ul>
                 <li><a><img height="40px" src="images/appstore.svg" class="wow fadeInUp" data-wow-delay="0.4s" /></a>
                 </li>
@@ -210,28 +210,27 @@
                 <div class="icon-box wow fadeInUp" data-wow-delay="0.2s"> <i class="fa fa-life-ring"
                     aria-hidden="true"></i>
                   <h5>User-Friendly Interface</h5>
-                  <p>Navigate our platform effortlessly with our intuitive user interface. Designed with simplicity in
-                    mind, our interface ensures a smooth and enjoyable gaming experience for all users.</p>
+                  <p>Our intuitive design ensures effortless navigation for a seamless gaming experience.</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="icon-box wow fadeInUp" data-wow-delay="0.4s"> <i class="fa fa-mobile"
                     aria-hidden="true"></i>
                   <h5>iOS and Android Support</h5>
-                  <p>Enjoy the ultimate cricket fantasy experience on the go! CricBrawl is compatible with both iOS and
-                    Android devices, allowing you to access your favorite fantasy cricket platform anytime, anywhere.
+                  <p>Enjoy CricBrawl on the go! Accessible on both iOS and Android devices, stay connected anytime,
+                    anywhere.
                   </p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="icon-box wow fadeInUp" data-wow-delay="0.6s"> <i class="fa fa-bolt" aria-hidden="true"></i>
                   <h5>Real-Time Excitement</h5>
-                  <p>Immerse yourself in the excitement of real-time updates. From live scores to instant fantasy point
-                    updates, CricBrawl delivers the pulse-pounding action of cricket straight to your fingertips.</p>
+                  <p>Experience real-time updates with live scores and instant fantasy points, bringing the excitement
+                    of cricket directly to
+                    your fingertips.</p>
                 </div>
               </div>
             </div>
-            <a href="#" class="about-btn">Learn More</a>
           </div>
         </div>
       </div>
@@ -243,12 +242,12 @@
   <section id="video" class="video-section prelative text-center white">
     <div class="section-padding video-overlay">
       <div class="container">
-        <h3>How To Play</h3>
-        <i class="fa fa-play" style="display: inline-block; opacity: 0.5;" id="video-icon" aria-hidden="true"></i>
+        <!-- <h3>How To Play</h3> -->
+        <!-- <i class="fa fa-play" style="display: inline-block; opacity: 0.5;" id="video-icon" aria-hidden="true"></i> -->
         <div class="video-popup">
           <div class="video-src">
             <div class="iframe-src">
-              <!-- ADD link of onboarding video -->
+              <!-- video url -->
             </div>
           </div>
         </div>
@@ -286,7 +285,7 @@
                     <p>Enjoy exclusive cricket battles with your friends in private matches. Set your own rules, create
                       custom challenges, and compete in a friendly yet fiercely competitive environment</p>
                   </div>
-                  <div class="media-right icon-border"> <span class="fa fa-battery-full" aria-hidden="true"></span>
+                  <div class="media-right icon-border"> <span class="fa fa-user-group" aria-hidden="true"></span>
                   </div>
                 </div>
                 <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
@@ -295,7 +294,7 @@
                     <p>Strategize and assemble your dream squad from a vast selection of cricket stars. Choose players
                       wisely based on their strengths, stats, and performance to create an unbeatable lineup</p>
                   </div>
-                  <div class="media-right icon-border"> <span class="fa fa-wifi" aria-hidden="true"></span> </div>
+                  <div class="media-right icon-border"> <span class="fa fa-trophy" aria-hidden="true"></span> </div>
                 </div>
               </div>
               <!-- Feature Image Slider-->
@@ -325,7 +324,7 @@
                   </div>
                 </div>
                 <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
-                  <div class="media-left icon-border media-right-margin"> <span class="fa fa-hdd"
+                  <div class="media-left icon-border media-right-margin"> <span class="fa fa-rocket"
                       aria-hidden="true"></span> </div>
                   <div class="media-body text-left">
                     <h5>Rise to Tournament Glory</h5>
@@ -419,22 +418,24 @@
             <p>CricBrawl is revolutionizing the world of fantasy cricket, and we invite you to join us on this thrilling
               journey. Enter
               your name and email to become a part of our exciting community. Stay updated as we prepare to launch our
-              first version
-              before the 2024 ICC Men's T20 World Cup.
+              first version.
             </p>
           </div>
           <div class="section-content">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-8 ">
-                <form id="contact_form" class="contact_form" style="padding-top: 2rem;" action="">
+                <form id="contact_form" class="contact_form" style="padding-top: 2rem;" action=""
+                  onsubmit="sendEmail()">
                   <div class="row">
                     <div class="col">
                       <input type="text" name="from_name" id="from_name" class="form-input w-100"
                         placeholder="Full Name" required>
                     </div>
                     <div class="col">
-                      <input type="email" id="reply_to" class="form-input w-100" name="reply_to" placeholder="Email"
-                        required>
+                      <input type="email" id="reply_to"
+                        pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
+                        title="Please enter a valid email address" class="form-input w-100" name="reply_to"
+                        placeholder="Email" required>
                     </div>
                   </div>
                   <div class="field input">
@@ -442,11 +443,10 @@
                   </div>
                   <input type="hidden" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
 
-                  <button class="btn-grad w-100 text-uppercase" type="submit" name="button" onclick="sendEmail()">JOIN
-                    WaitList </button>
+                  <input class="btn-grad w-100 text-uppercase" type="submit" value="JOIN WaitList" name="button" />
                 </form>
                 <div>
-                  <p class="message-ok invisible">You have joined our email list!</p>
+                  <p class="message-ok invisible">You have joined our email list! &#10024;</p>
                 </div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-4">
@@ -483,7 +483,7 @@
           <div class="sectioner-header text-center white">
             <h3>Download Our App</h3>
             <span class="line"></span>
-            <p class="white">Our app will be available in May! Get ready to enhance your cricket experience. Stay tuned
+            <p class="white">Our app will be available in June! Get ready to enhance your cricket experience. Stay tuned
               for the launch updates!</p>
           </div>
         </div>
