Added support section

--- a/index.html
+++ b/index.html
@@ -519,7 +519,9 @@
                   Play</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/fantasy-points.html">Fantasy
                   Points</a></li>
-              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/faq.html">FAQs</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/faq.html">FAQs</a>
+                <span style="color: #f08420">/</span> <a href="pages/support.html">Support</a>
+              </li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/terms.html">Terms and
                   Conditions</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/privacy.html">Privacy
