--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -205,6 +205,7 @@
                                     href="fantasy-points.html">Fantasy
                                     Points</a></li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="faq.html">FAQs</a>
+                                <span style="color: #f08420">/</span> <a href="support.html">Support</a>
                             </li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="terms.html">Terms and
                                     Conditions</a>
