Updated page title

--- a/pages/delete.html
+++ b/pages/delete.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Understanding Fantasy Points System on CricBrawl - Batting, Bowling, and Fielding</title>
+    <title>Request Account Deletion</title>
     <meta name="description"
         content="Learn how fantasy points are calculated on CricBrawl for batting, bowling, and fielding performances. Dive into the key metrics for each category, bonus points, and secondary metrics to maximize your team's score in fantasy cricket contests. Start strategizing and earning points today!">
     <meta name="keywords"
