Updated responsible play

--- a/pages/responsible.html
+++ b/pages/responsible.html
@@ -88,15 +88,18 @@
             <h5>Seek Help if Needed</h5>
             <p>If you or someone you know is struggling with gambling addiction or related issues, please reach out to
                 us at
-                info@cricbrawl.com. We are here to assist you and provide support.
+                <a href="mailto:info@cricbrawl.com">info@cricbrawl.com</a>. We are here to assist you and provide
+                support.
             </p>
 
             <h5>Additional Resources</h5>
-            <p>There are various organizations and resources available to individuals who need help with problem
-                gambling. The National
+            <p>This is a real-money gambling app. Please gamble responsibly and only bet what you can afford. For
+                gambling addiction
+                help and support, please contact, The National
                 Council On Problem Gambling operates a 24-hour confidential toll-free helpline that you can reach by
                 phone or text at
-                1-800-522-4700 or chat at ncpgambling.org/chat.
+                1-800-522-4700 or chat at <a
+                    href="https://www.ncpgambling.org/help-treatment/chat/">ncpgambling.org</a>.
             </p>
 
             <p><i>
