Added fair play and safety

--- a/pages/fair-play.html
+++ b/pages/fair-play.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Understanding Fantasy Points System on CricBrawl - Batting, Bowling, and Fielding</title>
+    <title>CricBrawl Fair Play and Safety</title>
     <meta name="description"
-        content="Learn how fantasy points are calculated on CricBrawl for batting, bowling, and fielding performances. Dive into the key metrics for each category, bonus points, and secondary metrics to maximize your team's score in fantasy cricket contests. Start strategizing and earning points today!">
+        content="CricBrawl is dedicated to providing a secure and equitable environment for all players.">
     <meta name="keywords"
         content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -57,112 +57,57 @@
     <section class="extra-content" data-scroll-index='0'>
         <div class="container">
             <div class="sectioner-header text-center">
-                <h3>Fantasy Points Guide</h3>
+                <h3>Fair Play and Safety</h3>
                 <span class="line"></span>
             </div>
-            <h4>Fantasy Points for Batting</h4>
-            <p>The key metric for batting is &#8220;Runs&#8221;. The secondary metric is &#8220;Strike Rate&#8221;.
-                Calculations are done accordingly.</p>
-            <p>
-                <strong>Key metric (Runs) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+1 point PER run</li>
-                <li>+1 point PER four</li>
-                <li>+2 points PER six</li>
-                <li>
-                    <span style="color: #800000;">-2 points if dismissed for a 0</span>
+            <ul>
+                <li><b>18+ Requirement:</b> All users must be at least 18 years old to participate in our contests.</li>
+            </ul>
+            <ul>
+                <li><b>Single Account Policy:</b> Each user is allowed only one account to maintain fairness.</li>
+            </ul>
+            <ul>
+                <li><b>Secure Verification:</b> Our verification process ensures that deposits and withdrawals are
+                    secure and that each
+                    user uses payment methods linked
+                    to their verified identity.</li>
+            </ul>
+            <ul>
+                <li><b>Transparency in Contests:</b> Users can download all teams in any live contest to verify fair
+                    play.</li>
+            </ul>
+            <ul>
+                <li><b>Employee Restrictions:</b> Employees are prohibited from participating in real money contests on
+                    CricBrawl.</li>
+            </ul>
+            <ul>
+                <li><b>Responsible Gaming:</b> CricBrawl promotes responsible gaming practices.</li>
+            </ul>
+            <ul>
+                <li><b>Entry Limits:</b> Contests limit the maximum entries any single user can submit, giving everyone
+                    a fair shot at winning.</li>
+            </ul>
+            <ul>
+                <li><b>Prohibition of Bots:</b> The use of bots or automated tools to enter contests or place bets is
+                    strictly forbidden.
                 </li>
             </ul>
-            <p>
-                <strong>Bonus Points</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for scoring 30 runs</li>
-                <li>+4 bonus points for a half-century</li>
-                <li>+8 bonus points for a century</li>
+            <ul>
+                <li><b>Experience Badges:</b> Each player's level is identified with an "Experience" badge, so users
+                    know the level of
+                    their competitors.</li>
             </ul>
-            <p>
-                <strong>Secondary metric (Strike Rate) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>
-                    <span style="color: #800000;">-6 points if Strike Rate is below 50</span>
+            <ul>
+                <li><b>Anti-Collusion Policy:</b> Collusion or teamwork between different users is strictly forbidden.
+                    Accounts found colluding will be permanently
+                    banned.</li>
+            </ul>
+            <ul>
+                <li><b>Reporting Violations:</b> If you suspect any violation of fair play, such as collusion or the use
+                    of bots, please submit details of the occurrence
+                    or contact us immediately at <a href="mailto:info@cricbrawl.com">info@cricbrawl.com</a> so we can
+                    address the issue promptly.
                 </li>
-                <li>
-                    <span style="color: #800000;">-4 points if Strike Rate is between 50 &#8211; 50.99</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-2 points if Strike Rate is between 60 &#8211; 70</span>
-                </li>
-                <li>0 points if Strike Rate is between 70-130</li>
-                <li>+2 points if Strike Rate is between 130-150</li>
-                <li>+4 points if Strike Rate is between 150.01-170</li>
-                <li>+6 points if Strike Rate is more than 170</li>
-            </ul>
-            <br />
-            <h4>Fantasy Points for Bowling</h4>
-            <p>The primary metric for bowlers is naturally Wickets &#8211; but Maiden overs are also an important
-                side metric. The secondary metric for bowlers is the Economy Rate.</p>
-            <p>
-                <strong>Key metric (Wickets) and side metric (Maidens)</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+12 points per maiden over</li>
-                <li>+20 points PER wicket</li>
-                <li>-2 points PER wide</li>
-                <li>-2 points PER no ball</li>
-            </ul>
-            <p>
-                <strong>Bonus Points</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for taking three wickets in a single match</li>
-                <li>+4 bonus points for taking four wickets in a single match (Total 8)</li>
-                <li>+8 bonus points for taking five OR MORE wickets in a single match (Total 16)</li>
-            </ul>
-            <p>
-                <strong>Secondary metric (Economy Rate) points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>6 points if his economy rate is below 5 runs per over</li>
-                <li>4 points if his economy rate is between 5 &#8211; 5.99 runs per over</li>
-                <li>2 points if his economy rate is between 6 &#8211; 7 runs per over</li>
-                <li>0 points if economy rate is between 7 and 10 runs per over</li>
-                <li>
-                    <span style="color: #800000;">-2 points if his economy rate is between 10 &#8211; 11 runs per
-                        over</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-4 points if his economy rate is between 11.01 &#8211; 12 runs per
-                        over</span>
-                </li>
-                <li>
-                    <span style="color: #800000;">-6 points if his economy rate is above 12 runs per over</span>
-                </li>
-            </ul>
-            <br />
-            <h4>Points for Catching / Fielding</h4>
-            <p>Catching is limited to non-bowler Catches (catch-and-bowled is separate from Catches). There are 3
-                metrics here, of them Catches are the key metric and the other two secondary.</p>
-            <p>
-                <strong>Key metric points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+8 points PER catch</li>
-            </ul>
-            <p>
-                <strong>Bonus Points:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+4 bonus points for taking three or more catches</li>
-            </ul>
-            <p>
-                <strong>Secondary Metrics:</strong>
-            </p>
-            <ul class="list-spacing">
-                <li>+6 points PER run out</li>
-                <li>+6 points PER stumped</li>
             </ul>
         </div>
     </section>
@@ -203,6 +148,7 @@
                             </li>
                         </ul>
                     </div>
+
 
                     <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left">
                         <h6 class="mb-4 font-weight-bold text-uppercase">Connect</h6>
