--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     <div class="media-body">
                       <p class="text-uppercase">E-mail</p>
                       <p class="text-uppercase"><a class="text-white"
-                          href="mailto:abcdefg@gmail.com">info@cricbrawl.com</a> </p>
+                          href="mailto:info@cricbrawl.com">info@cricbrawl.com</a> </p>
                     </div>
                   </div>
                 </div>
@@ -528,6 +528,8 @@
                   Policy</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/responsible.html">Responsible
                   Play</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/fair-play.html">Fair Play and
+                  Safety</a></li>
             </ul>
           </div>
 
