--- a/pages/faq.html
+++ b/pages/faq.html
@@ -124,6 +124,10 @@
                                     href="responsible.html">Responsible
                                     Play</a>
                             </li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="fair-play.html">Fair
+                                    Play and Safety
+                                </a>
+                            </li>
                         </ul>
                     </div>
 
